# ███╗░░░███╗░█████╗░██████╗░██╗░█████╗░██╗░░██╗░█████╗░
# ████╗░████║██╔══██╗██╔══██╗██║██╔══██╗██║░██╔╝██╔══██╗
# ██╔████╔██║██║░░██║██████╔╝██║██║░░██║█████═╝░███████║
# ██║╚██╔╝██║██║░░██║██╔══██╗██║██║░░██║██╔═██╗░██╔══██║
# ██║░╚═╝░██║╚█████╔╝██║░░██║██║╚█████╔╝██║░╚██╗██║░░██║
# ╚═╝░░░░░╚═╝░╚════╝░╚═╝░░╚═╝╚═╝░╚════╝░╚═╝░░╚═╝╚═╝░░╚═╝
# 2033/12/24 Merry Christmass!!
cmake_minimum_required(VERSION 3.20...3.23)
project(BoostFetchExample CXX)

###########################################################################
# Configure compiler settings
###########################################################################
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

###########################################################################
# Fetch Boost and CGAL libraries
###########################################################################
include(${CMAKE_CURRENT_LIST_DIR}/cmake/ThirdParty.cmake)

###########################################################################
# Configure sample build
###########################################################################
file(GLOB SRC ${CMAKE_CURRENT_LIST_DIR}/src/*.cpp)
add_executable(sample ${SRC})
target_link_libraries(sample CGAL::CGAL)
